--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "fs": "^0.0.1-security",
     "graphql": "^16.3.0",
     "graphql-request": "^4.1.0",
+    "lint": "^1.1.2",
     "moment": "^2.29.1",
     "net": "^1.0.2",
-    "next": "latest",
+    "next": "^12.1.5",
     "next-pwa": "^5.4.0",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
@@ -29,6 +30,7 @@
     "@types/node": "17.0.4",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.0",
+    "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.5",
     "prettier": "^2.5.1",
     "prettier-plugin-tailwindcss": "^0.1.1",
