--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^7.6.2",
+    "async": "^3.2.3",
     "cookie": "^0.4.2",
     "emailjs": "^3.8.0",
     "emailjs-com": "^3.2.0",
